--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src": "src"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,8 +30,14 @@
   },
   "homepage": "https://github.com/jung-digital/ring#readme",
   "dependencies": {
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "hasharray": "^1.0.0",
+    "jest": "^18.1.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-test-renderer": "^15.4.2"
   }
 }
