--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "error-stack-parser": "^2.0.0",
     "hasharray": "^1.0.0",
     "jest": "^18.1.0",
     "react": "^15.4.2",
