Rebrand to Ringa

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ring",
+  "name": "ringa",
   "version": "0.0.1",
   "description": "A framework for the data lifecycle of a highly modularized React application.",
   "main": "./src/index.js",
