--- a/package.json
+++ b/package.json
@@ -59,11 +59,14 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "error-stack-parser": "^2.0.0",
+    "hasharray": "^1.0.0",
     "jest": "^18.1.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.2"
+    "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.4.2",
+    "snake-case": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
