--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "dateformat": "^2.0.0",
     "error-stack-parser": "^2.0.0",
     "hasharray": "^1.0.0",
     "jest": "^18.1.0",
