--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "jest-cli": "^18.1.0",
     "webpack": "^2.2.0"
   }
 }
