--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ringa",
-  "version": "0.0.1",
-  "description": "A framework for the data lifecycle of a highly modularized React application.",
+  "version": "0.0.12",
+  "description": "Ringa is a highly extensible ES6 MVC-inspired library designed to help you build scalable and highly debuggable applications.",
   "main": "./dist/ringa.min.js",
   "directories": {
     "example": "example",
@@ -54,25 +54,25 @@
     }
   ],
   "dependencies": {
-    "babel-jest": "^18.0.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
     "dateformat": "^2.0.0",
     "error-stack-parser": "^2.0.0",
     "hasharray": "^1.0.0",
+    "snake-case": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-jest": "^18.0.0",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "jest": "^18.1.0",
+    "jest-cli": "^18.1.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.4.2",
-    "snake-case": "^2.1.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "jest-cli": "^18.1.0",
     "webpack": "^2.2.0"
   }
 }
