Add method to add properties to Model and fix model constructor

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     }
   ],
   "dependencies": {
+    "camelcase": "^4.0.0",
     "dateformat": "^2.0.0",
     "error-stack-parser": "^2.0.0",
     "hasharray": "^1.0.0",
