--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ringa",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Ringa is an ES6 MVC-inspired library designed to manage your asynchronous code and state as your project scales.",
   "main": "./dist/ringa.js",
   "directories": {
@@ -11,7 +11,10 @@
     "test": "jest --config jest.json",
     "build": "npm run dist && npm run dev",
     "dist": "webpack --progress --colors --config build/webpack.dist.js",
-    "dev": "webpack --progress --colors --config build/webpack.dev.js"
+    "dev": "webpack --progress --colors --config build/webpack.dev.js",
+    "release:major": "npm version major && npm publish && git push --follow-tags",
+    "release:minor": "npm version minor && npm publish && git push --follow-tags",
+    "release:patch": "npm version patch && npm publish && git push --follow-tags",
   },
   "repository": {
     "type": "git",
