Refactoring so that the RingaEvent is dispatched immediately

--- a/package.json
+++ b/package.json
@@ -79,5 +79,10 @@
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.4.2",
     "webpack": "^2.2.0"
+  },
+  "jest":{
+    "globals": {
+      "__DEV__": true
+    }
   }
 }
