--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
     "react": "^15.4.2",
