--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "build": "npm run dist && npm run dev",
     "dist": "webpack --progress --colors --config build/webpack.dist.js",
     "dev": "webpack --progress --colors --config build/webpack.dev.js",
-    "release:major": "npm version major && npm publish && git push --follow-tags",
-    "release:minor": "npm version minor && npm publish && git push --follow-tags",
-    "release:patch": "npm version patch && npm publish && git push --follow-tags"
+    "release:major": "npm test && npm run build && npm version major && npm publish && git push --follow-tags",
+    "release:minor": "npm test && npm run build && npm version minor && npm publish && git push --follow-tags",
+    "release:patch": "npm test && npm run build && npm version patch && npm publish && git push --follow-tags"
   },
   "repository": {
     "type": "git",
