--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "error-stack-parser": "^2.0.0",
     "hasharray": "^1.1.0",
     "jsdoc": "^3.4.3",
+    "react-dom": "^15.5.4",
     "snake-case": "^2.1.0",
     "trie-search": "^1.0.1"
   },
@@ -75,11 +76,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
     "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "^15.4.2",
+    "react-test-renderer": "15.5.4",
     "webpack": "^2.2.0"
   },
   "jest": {
