Small updates to Controller and ExecutorAbstract

--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
       ]
     }
   ],
+  "peerDependencies": {
+    "react-dom": "15.5.4"
+  },
   "dependencies": {
     "camelcase": "^4.0.0",
     "dateformat": "^2.0.0",
@@ -63,7 +66,6 @@
     "hasharray": "^1.1.0",
     "jsdoc": "^3.4.3",
     "react": "15.5.4",
-    "react-dom": "15.5.4",
     "snake-case": "^2.1.0",
     "trie-search": "^1.0.1"
   },
