--- a/package.json
+++ b/package.json
@@ -67,23 +67,26 @@
     "jsdoc": "^3.4.3",
     "react": "15.5.4",
     "snake-case": "^2.1.0",
-    "trie-search": "^1.0.1"
+    "string-width": "^2.1.1",
+    "trie-search": "^1.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "21.2.0",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
-    "jest": "^18.1.0",
-    "jest-cli": "^18.1.0",
+    "jest": "21.2.1",
+    "jest-cli": "21.2.1",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "15.4.2",
     "webpack": "^2.2.0"
   },
   "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "./tests/coverage",
     "globals": {
       "__DEV__": true
     }
