--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,5 +1,9 @@
-site_name: RingaJS Documentation
+site_name: RingaJS
+theme_dir: cinder
 pages:
     - Home: index.md
     - Why Ringa: whyRinga.md
     - Model: model.md
+extra_css: [extra.css]
+repo_url: https://github.com/joshjung/ringa
+include_next_prev: false
