Updates to the documentation and adding a timeoutHandler to the Controller options

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -6,6 +6,7 @@ pages:
     - Demo: demo.md
     - Hello World: helloWorld.md
     - Model: model.md
+    - Links: links.md
 extra_css: [extra.css]
 repo_url: https://github.com/joshjung/ringa
 include_next_prev: false
