--- a/package.json
+++ b/package.json
@@ -56,10 +56,6 @@
       ]
     }
   ],
-  "peerDependencies": {
-    "react-dom": "15.5.4",
-    "react": "15.5.4"
-  },
   "dependencies": {
     "camelcase": "^4.0.0",
     "dateformat": "^2.0.0",
@@ -80,6 +76,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "jest": "21.2.1",
     "jest-cli": "21.2.1",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "15.4.2",
     "webpack": "^2.2.0"
