Adding new RINGA_CURRENT_WHITELIST feature to help with maintaining the uglify whitelist

--- a/package.json
+++ b/package.json
@@ -86,9 +86,6 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageDirectory": "./tests/coverage",
-    "globals": {
-      "__DEV__": true
-    }
+    "coverageDirectory": "./tests/coverage"
   }
 }
